# parsers

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  ruff.toml  run.py  settings.py
.github/workflows/: ci.yml
src/chargemap/: run.py
src/electromaps/: run.py
src/googlemaps/: run.py
src/utils/: chargemap_classes.py  extract_dicts.py  getting_id_places_from_db.py  make_request.py  make_request_proxy.py  setup_logging.py  uploading_db_functions.py
tests/: conftest.py
tests/chargemap/: test_data_processing.py  test_processing_places_and_save_db.py
tests/data/: chargemap_places.json
tests/electromaps/: test_data_processing.py  test_processing_comments.py  test_processing_places.py
