[tool.poetry]
name = "parsers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.29.0"
click = "^8.1.3"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
schedule = "^1.2.0"
fake-useragent = "^1.1.3"
useragent = "^0.1.1"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.263"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
